[package]
name = "previewbot_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
speedy2d = "2.0.0"
libdeflater = "1.19.3"
base64 = "0.22.0"
image = "0.24.9"
lazy_static = "1.4.0"