workspace = { members = ["audiotest", "gputest", "gputest2"] }
[package]
name = "previewbot_render"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
speedy2d = "2.1.0"
libdeflater = "1.20.0"
base64 = "0.22.1"
image = "0.25.1"
lazy_static = "1.5.0"
pollster = "0.3.0"
wgpu = "22.0.0"
flume = "0.11.0"